--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -20,7 +20,7 @@
       margin: 0;
       line-height: 1.5;
       word-break: keep-all;
-      font-family: 'Noto Serif KR';
+      font-family: 'Noto Sans KR';
     }
 
     .blog-post-info {
@@ -145,8 +145,8 @@
     }
 
     .blog-post-content {
-      margin-top: 3rem;
-      font-family: 'Noto Serif KR';
+      margin-top: 5rem;
+      font-family: 'Noto Sans KR';
 
       h1,
       h2,
@@ -154,7 +154,7 @@
       h4,
       h5,
       h6 {
-        font-family: 'Noto Serif KR';
+        font-family: 'Noto Sans KR';
       }
       h1 {
         margin-top: 4rem;
@@ -174,7 +174,7 @@
         }
       }
       code {
-        font-family: 'Nanum Gothic Coding';
+        font-family: 'Source Code Pro';
       }
 
       blockquote {
