--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -20,7 +20,7 @@
       margin: 0;
       line-height: 1.5;
       word-break: keep-all;
-      font-family: 'Noto Serif KR';
+      font-family: 'Noto Sans KR';
     }
 
     .blog-post-info {
@@ -159,7 +159,7 @@
 
     .blog-post-content {
       margin-top: 3rem;
-      font-family: 'Noto Serif KR';
+      font-family: 'Noto Sans KR';
 
       h1,
       h2,
@@ -167,7 +167,7 @@
       h4,
       h5,
       h6 {
-        font-family: 'Noto Serif KR';
+        font-family: 'Noto Sans KR';
       }
       h1 {
         margin-top: 4rem;
@@ -187,7 +187,7 @@
         }
       }
       code {
-        font-family: 'Nanum Gothic Coding' !important;
+        font-family: 'Source Code Pro' !important;
       }
 
       blockquote {
